sonar clean up